--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # SITE SETTINGS
 #
 # title appears in the header
-title: Humanizing Nature Research History with Static Web Design
+title: Distant Listening, Using Python and Apps Scripts to Text Mine and Tag Oral History Collections
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
@@ -18,7 +18,7 @@ title: Humanizing Nature Research History with Static Web Design
 title-icon: 
 # description, keywords, and image for meta tags
 # these do not visibility appear on the pages, but used for SEO
-description: "Presentation for UCLA Library's Captivity: Assembling Nature’s Histories, May 2024"
+description: "Article submission for Code4Lib, Summer 2024"
 keywords: 
 # featured-image is added to metadata tags for social media sharing
 # use a relative path to image in this repository or full URL
@@ -33,7 +33,7 @@ github_username: aweymo
 # year or date published
 pub_year: 2024
 # location of code, the full url to your github repository
-source-code: https://github.com/aweymo-ui/humanizing
+source-code: https://github.com/aweymo-ui/distant_listening
 
 ##########
 # URL VARIABLES [optional!!]
